# aiChatBot

./: README.md  app.py  main.py  pyproject.toml
static/: script.js  style.css
templates/: index.html
